loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:2: error: not found: value avancer
  avancer()
  ^